# ferri

./: .gitignore  Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  db.rs  error.rs  lib.rs  logger.rs  util.rs  walkdir.rs
crates/frontend/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/api/: mod.rs
migrations/: 20250903054615_initdb.sql  20250903162317_oauth.sql
tests/: api-test.http
