[package]
name = "ferri"
version = "0.1.0"
edition = "2024"
description = "a tiny HTTP file ferry."

[dependencies]
eframe = { version = "0.32.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "serde",
    "wgpu",
    "persistence",
    "ron",
    "web_screen_reader",
] }
axum = { version = "0.8.4", features = ["http2", "macros", "multipart", "ws"] }
axum-macros = "0.5.0"
config = "0.15.15"
futures-util = { version = "0.3.31", features = ["sink"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "chrono",
    "json",
    "serde",
] }
tokio-util = { version = "0.7.16", features = ["full"] }
tower-http = "0.6.6"
bon = "3.7.2"
derive_more = { version = "2.0.1", features = ["full"] }
once_cell = "1.21.3"
lazy_static = "1.5.0"
memchr = "2.7.5"
regex = "1.11.2"
dirs = "6.0.0"
home = "0.5.11"
rand = "0.9.2"
ahash = "0.8.12"
rayon = "1.11.0"
urlencoding = "2.1.3"
clap = { version = "4.5.47", features = ["derive", "env"] }
clap_complete = "4.5.57"
mime_guess = "2.0.5"
walkdir = "2.5.0"
form_urlencoded = "1.2.2"

[dev-dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
