[package]
name = "ferri-core"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
name = "ferri_core"

[dependencies]
config.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
sqlx = { workspace = true, features = ["sqlite", "time", "runtime-tokio"] }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "chrono",
    "json",
    "serde",
] }
